-bug: When using Web Basic authentication, user is directed to default page and not REQUEST URI
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
-documentation: Documentation of specific rrdtool feature
-documentation: Use of SNMP exec option up to net-snmp 5.3
-feature#0001350: Compare Cacti Data Source Info to current RRD File Info
-feature#0001332: non SNMP Hosts' Reindex Method should not default to "Uptime goes backwards"
-feature#0001323: getting all graph template id associated to a host template
-feature#0001289: Add "Graph Properties" wrench to tree+preview mode
-feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
-feature#0001235: CLI script needed to activate a query: add_data_query.php
-feature#0001233: Move $export_types variable definition from templates_export.php to include/global_form.php
-feature#0001220: Disable snmpbulkwalk if $max_oids is less than 2 (was: CACTI run problem when trying to walk using SNMP Bulk Request)
-feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
-feature#0001195: add graph title to graphs page
-feature#0001189: Introducing |data_source_title| variable
-feature#0001185: Mass enable/disable graph export per graph from Graph Management
-feature#0001179: Visual Fix for CACTI Graphs View Interface(list,preview)
-feature#0001177: CLI Reindexing - poller_reindex_hosts.php: allow filter on "host description"
-feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
-feature#0001140: CLI-Script to associate a graph template to a host
-feature#0001124: Devices/Host Templates - remove already associated objects from dropdown selector
-feature#0001123: Performance tweak by adding some indices
-feature#0001122: Propagate Host Template changes to related hosts