@@ -446,7 +446,7 @@ function template_edit() {
 		if ($field_array["flags"] == "ALWAYSTEMPLATE") {
 			$form_array[$field_name]["description"] = "<em>This field is always templated.</em>";
 		}else{
-			$form_array[$field_name]["description"] = "";
+#			$form_array[$field_name]["description"] = "";
 			$form_array[$field_name]["sub_checkbox"] = array(
 				"name" => "t_" . $field_name,
 				"friendly_name" => "Use Per-Data Source Value (Ignore this Value)",
@@ -528,7 +528,7 @@ function template_edit() {
 	while (list($field_name, $field_array) = each($struct_data_source_item)) {
 		$form_array += array($field_name => $struct_data_source_item[$field_name]);
 
-		$form_array[$field_name]["description"] = "";
+#		$form_array[$field_name]["description"] = "";
 		$form_array[$field_name]["value"] = (isset($template_rrd) ? $template_rrd[$field_name] : "");
 		$form_array[$field_name]["sub_checkbox"] = array(
 			"name" => "t_" . $field_name,
@@ -594,6 +594,7 @@ function template_edit() {
 	form_save_button_alt("return");
 
 	include_once(CACTI_BASE_PATH . "/lib/jquery/data_source_item.js");
+	include_once(CACTI_BASE_PATH . "/lib/jquery/field_description_hover.js");
 }
 
 function template() {
