@@ -1,0 +1,13 @@
+<script type="text/javascript">
+<!--
+$(document).ready(function(){
+	$('.description').hide();
+	$('.hover').hover(function() {
+	    $(this).children('span.description').show();
+	}, function() {
+	    $(this).children('span.description').hide();
+	});
+
+});
+-->
+</script>
